--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nanasqlite"
-version = "1.0.0"
+dynamic = ["version"]
 description = "A dict-like SQLite wrapper with APSW for instant persistence and memory caching"
 readme = "README.md"
 license = {text = "MIT"}
@@ -59,6 +59,9 @@ package-dir = {"nanasqlite" = "src/nanasqlite"}
 
 [tool.setuptools.package-data]
 nanasqlite = ["py.typed"]
+
+[tool.setuptools.dynamic]
+version = {attr = "nanasqlite.__version__"}
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
