--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -134,8 +134,7 @@ jobs:
     
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_TOKEN }}
+      # Trusted Publishing - トークン不要、OIDC認証
 
   release:
     needs: [check-version, build, publish]
