--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest apsw
+        pip install pytest pytest-benchmark apsw
         pip install -e .
     
     - name: Run tests
       run: |
-        pytest tests/ -v --tb=short --junitxml=test-results.xml
+        pytest tests/test_nanasqlite.py -v --tb=short --junitxml=test-results.xml
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -40,8 +40,57 @@ jobs:
         name: test-results-${{ matrix.os }}-py${{ matrix.python-version }}
         path: test-results.xml
 
-  test-summary:
+  benchmark:
+    runs-on: ubuntu-latest
     needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.11'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest pytest-benchmark apsw
+        pip install -e .
+    
+    - name: Run benchmarks
+      run: |
+        pytest tests/test_benchmark.py -v --benchmark-only --benchmark-json=benchmark.json || true
+    
+    - name: Upload benchmark results
+      uses: actions/upload-artifact@v4
+      with:
+        name: benchmark-results
+        path: benchmark.json
+    
+    - name: Benchmark Summary
+      run: |
+        echo "## 📊 Performance Benchmarks" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        if [ -f benchmark.json ]; then
+          echo "| Test | Mean | Rounds |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|------|--------|" >> $GITHUB_STEP_SUMMARY
+          python -c "
+import json
+with open('benchmark.json') as f:
+    data = json.load(f)
+for bench in data.get('benchmarks', []):
+    name = bench['name'].split('::')[-1]
+    mean = bench['stats']['mean'] * 1000  # ms
+    rounds = bench['stats']['rounds']
+    print(f'| {name} | {mean:.3f}ms | {rounds} |')
+" >> $GITHUB_STEP_SUMMARY || echo "ベンチマーク結果の解析に失敗しました" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "ベンチマーク結果が見つかりません" >> $GITHUB_STEP_SUMMARY
+        fi
+
+  test-summary:
+    needs: [test, benchmark]
     runs-on: ubuntu-latest
     if: always()
     steps:
