--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,18 +73,9 @@ jobs:
         echo "## 📊 Performance Benchmarks" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         if [ -f benchmark.json ]; then
-          echo "| Test | Mean | Rounds |" >> $GITHUB_STEP_SUMMARY
-          echo "|------|------|--------|" >> $GITHUB_STEP_SUMMARY
-          python3 << 'EOF' >> $GITHUB_STEP_SUMMARY
-        import json
-        with open('benchmark.json') as f:
-            data = json.load(f)
-        for bench in data.get('benchmarks', []):
-            name = bench['name'].split('::')[-1]
-            mean = bench['stats']['mean'] * 1000
-            rounds = bench['stats']['rounds']
-            print(f'| {name} | {mean:.3f}ms | {rounds} |')
-        EOF
+          echo "Benchmark results saved to artifact." >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          cat benchmark.json | head -50 >> $GITHUB_STEP_SUMMARY || true
         else
           echo "ベンチマーク結果が見つかりません" >> $GITHUB_STEP_SUMMARY
         fi
