テストフェーズでベンチマークが実行される問題を修正

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
     
     - name: Run tests
       run: |
-        pytest tests/ -v --tb=short --junitxml=test-results.xml
+        pytest tests/ -v --tb=short --junitxml=test-results.xml --benchmark-skip
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
