--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,6 +76,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
@@ -83,9 +88,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest apsw
-        pip install -e .
+        uv pip install --system pytest apsw
+        uv pip install --system -e .
     
     - name: Run tests
       run: pytest tests/ -v --tb=short
@@ -98,15 +102,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
         python-version: '3.11'
     
     - name: Install build tools
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
+      run: uv pip install --system build
     
     - name: Build package
       run: python -m build
