--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
@@ -24,9 +29,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-benchmark pytest-asyncio apsw pydantic
-        pip install -e .
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
+        uv pip install --system -e .
     
     - name: Run tests
       run: |
@@ -51,6 +55,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
@@ -58,9 +67,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-benchmark pytest-asyncio apsw pydantic
-        pip install -e .
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
+        uv pip install --system -e .
     
     - name: Run sync benchmarks
       run: |
@@ -84,6 +92,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
@@ -91,9 +104,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-benchmark pytest-asyncio apsw pydantic
-        pip install -e .
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
+        uv pip install --system -e .
     
     - name: Run async benchmarks
       run: |
