--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,29 +70,45 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.11']
-    
+        include:
+          # Ubuntu: Full version coverage for release
+          - os: ubuntu-latest
+            python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+          # Windows: Limited versions for release
+          - os: windows-latest
+            python-version: ["3.9", "3.11", "3.13"]
+          # macOS: Limited versions for release
+          - os: macos-latest
+            python-version: ["3.9", "3.11", "3.13"]
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Install uv
       uses: astral-sh/setup-uv@v7
       with:
         enable-cache: true
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install dependencies
       run: |
-        uv pip install --system pytest pytest-xdist pytest-asyncio apsw pydantic
+        uv pip install --system pytest pytest-benchmark pytest-asyncio pytest-xdist apsw pydantic
         uv pip install --system -e .
-    
+
     - name: Run tests
-      run: pytest tests/ -v --tb=short -n auto --ignore=tests/test_benchmark.py --ignore=tests/test_async_benchmark.py
+      run: |
+        pytest tests/ -v --tb=short --junitxml=test-results.xml -n auto --ignore=tests/test_benchmark.py --ignore=tests/test_async_benchmark.py
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-results-${{ matrix.os }}-py${{ matrix.python-version }}
+        path: test-results.xml
 
   build:
     needs: [check-version, test]
