--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,16 +70,23 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        include:
-          # Ubuntu: Full version coverage for release
-          - os: ubuntu-latest
-            python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
-          # Windows: Limited versions for release
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+        exclude:
+          # Windows: only 3.9, 3.11, 3.13
           - os: windows-latest
-            python-version: ["3.9", "3.11", "3.13"]
-          # macOS: Limited versions for release
+            python-version: "3.10"
+          - os: windows-latest
+            python-version: "3.12"
+          - os: windows-latest
+            python-version: "3.14"
+          # macOS: only 3.9, 3.11, 3.13
           - os: macos-latest
-            python-version: ["3.9", "3.11", "3.13"]
+            python-version: "3.10"
+          - os: macos-latest
+            python-version: "3.12"
+          - os: macos-latest
+            python-version: "3.14"
 
     steps:
     - uses: actions/checkout@v4
