--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.11", "3.13"]
+        exclude:
+          # Windows: only 3.13
+          - os: windows-latest
+            python-version: "3.11"
 
     steps:
     - uses: actions/checkout@v4
@@ -63,6 +67,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.11", "3.13"]
+        exclude:
+          # Windows: only 3.13
+          - os: windows-latest
+            python-version: "3.11"
 
     steps:
     - uses: actions/checkout@v4
@@ -100,6 +108,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.11", "3.13"]
+        exclude:
+          # Windows: only 3.13
+          - os: windows-latest
+            python-version: "3.11"
 
     steps:
     - uses: actions/checkout@v4
