--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ concurrency:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
@@ -47,12 +48,29 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    # Windows最適化: TEMPをD:ドライブに
+    - name: Setup Windows temp directory
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: New-Item -ItemType Directory -Force -Path D:\temp
+
     - name: Install dependencies
       run: |
         uv pip install --system pytest pytest-benchmark pytest-asyncio pytest-xdist apsw pydantic
         uv pip install --system -e .
     
-    - name: Run tests
+    # Windows: TEMP最適化 + 並列数固定
+    - name: Run tests (Windows)
+      if: runner.os == 'Windows'
+      env:
+        TEMP: 'D:\temp'
+        TMP: 'D:\temp'
+      run: |
+        pytest tests/ -v --tb=short --junitxml=test-results.xml -n 4 --ignore=tests/test_benchmark.py --ignore=tests/test_async_benchmark.py
+
+    # Linux/macOS: 変更なし
+    - name: Run tests (Linux/macOS)
+      if: runner.os != 'Windows'
       run: |
         pytest tests/ -v --tb=short --junitxml=test-results.xml -n auto --ignore=tests/test_benchmark.py --ignore=tests/test_async_benchmark.py
     
@@ -62,9 +80,11 @@ jobs:
       with:
         name: test-results-${{ matrix.os }}-py${{ matrix.python-version }}
         path: test-results.xml
+        retention-days: 7
 
   benchmark:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -88,12 +108,26 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    - name: Setup Windows temp directory
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: New-Item -ItemType Directory -Force -Path D:\temp
+
     - name: Install dependencies
       run: |
         uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
         uv pip install --system -e .
     
-    - name: Run sync benchmarks
+    - name: Run sync benchmarks (Windows)
+      if: runner.os == 'Windows'
+      env:
+        TEMP: 'D:\temp'
+        TMP: 'D:\temp'
+      run: |
+        pytest tests/test_benchmark.py -v --benchmark-only --benchmark-json=benchmark.json || true
+
+    - name: Run sync benchmarks (Linux/macOS)
+      if: runner.os != 'Windows'
       run: |
         pytest tests/test_benchmark.py -v --benchmark-only --benchmark-json=benchmark.json || true
     
@@ -102,9 +136,11 @@ jobs:
       with:
         name: benchmark-results-${{ matrix.os }}-py${{ matrix.python-version }}
         path: benchmark.json
+        retention-days: 7
 
   async-benchmark:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -128,12 +164,26 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    - name: Setup Windows temp directory
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: New-Item -ItemType Directory -Force -Path D:\temp
+
     - name: Install dependencies
       run: |
         uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
         uv pip install --system -e .
     
-    - name: Run async benchmarks
+    - name: Run async benchmarks (Windows)
+      if: runner.os == 'Windows'
+      env:
+        TEMP: 'D:\temp'
+        TMP: 'D:\temp'
+      run: |
+        pytest tests/test_async_benchmark.py -v --benchmark-only --benchmark-json=async-benchmark.json || true
+
+    - name: Run async benchmarks (Linux/macOS)
+      if: runner.os != 'Windows'
       run: |
         pytest tests/test_async_benchmark.py -v --benchmark-only --benchmark-json=async-benchmark.json || true
     
@@ -142,10 +192,12 @@ jobs:
       with:
         name: async-benchmark-results-${{ matrix.os }}-py${{ matrix.python-version }}
         path: async-benchmark.json
+        retention-days: 7
 
   benchmark-summary:
     needs: [benchmark, async-benchmark]
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     if: always()
     
     steps:
@@ -183,6 +235,7 @@ jobs:
   test-summary:
     needs: [test, benchmark-summary]
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     if: always()
     steps:
     - name: Download all test results
