--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -167,6 +167,7 @@ jobs:
       with:
         name: dist
         path: dist/
+        retention-days: 7
 
   publish:
     needs: [check-version, build]
