試験的にテストを分離しました

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,164 +82,14 @@ jobs:
         path: test-results.xml
         retention-days: 7
 
-  benchmark:
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.11", "3.13"]
-        exclude:
-          # Windows: only 3.13
-          - os: windows-latest
-            python-version: "3.11"
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install uv
-      uses: astral-sh/setup-uv@v7
-      with:
-        enable-cache: true
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v6
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Setup Windows temp directory
-      if: runner.os == 'Windows'
-      shell: powershell
-      run: New-Item -ItemType Directory -Force -Path D:\temp
-
-    - name: Install dependencies
-      run: |
-        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
-        uv pip install --system -e .
-    
-    - name: Run sync benchmarks (Windows)
-      if: runner.os == 'Windows'
-      env:
-        TEMP: 'D:\temp'
-        TMP: 'D:\temp'
-      run: |
-        pytest tests/test_benchmark.py -v --benchmark-only --benchmark-json=benchmark.json || true
-
-    - name: Run sync benchmarks (Linux/macOS)
-      if: runner.os != 'Windows'
-      run: |
-        pytest tests/test_benchmark.py -v --benchmark-only --benchmark-json=benchmark.json || true
-    
-    - name: Upload sync benchmark results
-      uses: actions/upload-artifact@v4
-      with:
-        name: benchmark-results-${{ matrix.os }}-py${{ matrix.python-version }}
-        path: benchmark.json
-        retention-days: 7
-
-  async-benchmark:
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.11", "3.13"]
-        exclude:
-          # Windows: only 3.13
-          - os: windows-latest
-            python-version: "3.11"
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install uv
-      uses: astral-sh/setup-uv@v7
-      with:
-        enable-cache: true
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v6
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Setup Windows temp directory
-      if: runner.os == 'Windows'
-      shell: powershell
-      run: New-Item -ItemType Directory -Force -Path D:\temp
-
-    - name: Install dependencies
-      run: |
-        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
-        uv pip install --system -e .
-    
-    - name: Run async benchmarks (Windows)
-      if: runner.os == 'Windows'
-      env:
-        TEMP: 'D:\temp'
-        TMP: 'D:\temp'
-      run: |
-        pytest tests/test_async_benchmark.py -v --benchmark-only --benchmark-json=async-benchmark.json || true
-
-    - name: Run async benchmarks (Linux/macOS)
-      if: runner.os != 'Windows'
-      run: |
-        pytest tests/test_async_benchmark.py -v --benchmark-only --benchmark-json=async-benchmark.json || true
-    
-    - name: Upload async benchmark results
-      uses: actions/upload-artifact@v4
-      with:
-        name: async-benchmark-results-${{ matrix.os }}-py${{ matrix.python-version }}
-        path: async-benchmark.json
-        retention-days: 7
-
-  benchmark-summary:
-    needs: [benchmark, async-benchmark]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    if: always()
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Download sync benchmark results
-      uses: actions/download-artifact@v7
-      with:
-        pattern: benchmark-results-*
-        path: benchmark-results
-    
-    - name: Download async benchmark results
-      uses: actions/download-artifact@v7
-      with:
-        pattern: async-benchmark-results-*
-        path: async-benchmark-results
-    
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: '3.11'
-    
-    - name: Generate Combined Benchmark Summary
-      run: |
-        echo "## 📊 Performance Benchmarks" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 🔄 Sync Benchmarks (NanaSQLite)" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        python3 scripts/parse_benchmark.py benchmark-results sync >> $GITHUB_STEP_SUMMARY || echo "Failed to parse sync benchmark results" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### ⚡ Async Benchmarks (AsyncNanaSQLite)" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        python3 scripts/parse_benchmark.py async-benchmark-results async >> $GITHUB_STEP_SUMMARY || echo "Failed to parse async benchmark results" >> $GITHUB_STEP_SUMMARY
-
   test-summary:
-    needs: [test, benchmark-summary]
+    needs: [test]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: always()
     steps:
     - name: Download all test results
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         pattern: test-results-*
         path: test-results
