--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ description = Run mypy type checker
 deps = 
     mypy>=1.13.0
     apsw
-commands = mypy src/nanasqlite
+commands = mypy src/nanasqlite --no-strict-optional
 
 [testenv:format]
 description = Format code with ruff
