--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,13 @@ known-first-party = ["nanasqlite"]
 
 [tool.mypy]
 python_version = "3.9"
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
 ignore_missing_imports = true
+no_implicit_optional = false
+allow_redefinition = true
+check_untyped_defs = false
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disable_error_code = ["override", "assignment", "arg-type", "union-attr", "index", "no-redef", "no-any-return", "var-annotated"]
 exclude = ["tests/"]
