--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,14 +85,18 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ${{ github.ref == 'refs/heads/main' && fromJSON('["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]') || fromJSON('["3.13"]') }}
         exclude:
-          # macOS: limit versions for speed (skip 3.10, 3.12, 3.14)
+          # macOS: limit to 2 popular versions (3.11, 3.13)
+          - os: macos-latest
+            python-version: "3.9"
           - os: macos-latest
             python-version: "3.10"
           - os: macos-latest
             python-version: "3.12"
           - os: macos-latest
             python-version: "3.14"
-          # Windows: limit versions for speed (skip 3.10, 3.12, 3.14)
+          # Windows: limit to 2 popular versions (3.11, 3.13)
+          - os: windows-latest
+            python-version: "3.9"
           - os: windows-latest
             python-version: "3.10"
           - os: windows-latest
@@ -323,7 +327,7 @@ jobs:
     
     steps:
     - name: Download build artifacts
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
@@ -346,7 +350,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Download build artifacts
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
