#### 開発ツール - **CI/CDワークフローの統合**:   - `lint.yml`, `test.yml`, `publish.yml`, `quality-gate.yml` を一つの `ci.yml` に統合。   - リリリースサマリーにPyPIとGitHub Releaseへの直接リンクを追加。 - **テスト環境の最適化**:   - CIテストマトリックスを調整。Ubuntuは全バージョン、Windows/macOSは利用率の高い Python 3.11および3.13に絞り込み、実行時間を短縮。   - dev依存関係に `pytest-xdist` を追加し、並列テストをサポート。 - **型チェックの改善**:   - mypy設定の緩和と整理により、156件の型エラーを解消（`--no-strict-optional` の導入とエラーコードの個別制御）。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -391,8 +391,8 @@ jobs:
         echo "**Version:** v${{ needs.check-version.outputs.local_version }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### Published to:" >> $GITHUB_STEP_SUMMARY
-        echo "- ✅ PyPI" >> $GITHUB_STEP_SUMMARY
-        echo "- ✅ GitHub Releases" >> $GITHUB_STEP_SUMMARY
+        echo "- ✅ [PyPI](https://pypi.org/project/nanasqlite/${{ needs.check-version.outputs.local_version }}/)" >> $GITHUB_STEP_SUMMARY
+        echo "- ✅ [GitHub Release](https://github.com/${{ github.repository }}/releases/tag/v${{ needs.check-version.outputs.local_version }})" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
         echo "pip install nanasqlite==${{ needs.check-version.outputs.local_version }}" >> $GITHUB_STEP_SUMMARY
