--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -144,6 +144,12 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Fetch gh-pages branch
+      if: github.ref == 'refs/heads/main'
+      run: |
+        git fetch origin gh-pages:gh-pages || echo "gh-pages branch not found, will be created"
     
     - name: Download sync benchmark results
       uses: actions/download-artifact@v4
